[project]
name = "pbeis"
description = "PyBaMM EIS"
requires-python = ">=3.9"
license = {file = "LICENSE.md"}
dynamic = ["version", "readme"]
dependencies = [
    "pybamm==24.5rc2",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "sphinx",
    "myst-parser",
    "nbmake",
    "pytest-html",
    "pytest-cov",
]
docs = [
    # Sphinx extensions
    "autodoc",
    "mathjax",
    # Third-party extensions
    "myst-parser",
]

[tools.setuptools]
packages = [
    { include = "pbeis" },
]

[tool.setuptools.dynamic]
version = {attr = "pbeis.version.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}
