[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pybammeis"
description = "PyBaMM EIS"
requires-python = ">=3.10"
license = {file = "LICENSE.md"}
dynamic = ["version", "readme"]
dependencies = [
    "pybamm==24.5",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "sphinx",
    "myst-parser",
    "nbmake",
    "pytest-html",
    "pytest-cov",
]
docs = [
    "autodoc",
    "mathjax",
    "myst-parser",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pbeis"]

[tool.setuptools.dynamic]
version = {attr = "pbeis.version.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}
